--- a/work.html
+++ b/work.html
@@ -2,14 +2,16 @@
 <html>
   <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
+    <link rel="stylesheet" href="./css/main.css">
     <style>
       body {
         display: flex;
         align-items: center;
         justify-content: center;
-        height: 100vh;
         margin: 0;
+        padding-top: 5%;
       }
 
       canvas {
@@ -18,12 +20,13 @@
     </style>
   </head>
   <body>
-    <div>
-      <ul>
-        <li>Rectángulo</li>
-        <li>Ellipse</li>
-        <li>Línea</li>
-        <li>Fuente</li>
+    <div class="mr-4">
+      <ul id="option-list">
+        <li class="list-group-item "><img src="img/software-shape-rectangle_98272.png">Rectángulo</li>
+        <li class="list-group-item "><img src="img/ellipse_icon-icons.com_54003.png">Ellipse</li>
+        <li class="list-group-item "><img src="img/straight-horizontal-line_icon-icons.com_74237.png">Línea</li>
+        <li class="list-group-item "><img src="img/rename_inputtext_thetext_1544.png">Fuente</li>
+        <li class="list-group-item "><img src="img/1491254405-plusaddmoredetail_82972.png">Nueva</li>
       </ul>
     </div>
     <script>
