--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
     <div class="container">
         <section class="tools">
             <div class="row">
-                <label class="title">Elementos</label>
+                <label class="title">Mis Proyectos</label>
             <ul class="opciones">
                 <li class="opcion">
                     <img src="./icons/rectangle.svg" alt="">
