--- a/registro.html
+++ b/registro.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/createUser.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/lpage.css">
+
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
     </style>
@@ -30,7 +30,7 @@
             <input type="text" id="username" class="col-9 mt-3"placeholder="Nombre de usuario" />
             <br>
             <label class="label_register col-12 mt-3 ">Contraseña</label>
-            <input type="password" id="password"class="col-9 mt-3" placeholder="Contraseña" />
+            <input type="password" id="password" class="col-9 mt-3" placeholder="Contraseña" autocomplete="current-password" />
             <br>
             <button type="submit" class="col-7 mt-4">Iniciar sesión</button>
             </div>
@@ -41,15 +41,15 @@
         
     </section>
     <script>
-        document.getElementById("loginForm").addEventListener("submit", function(event) {
-            event.preventDefault();            validarCampos();
+        document.getElementById("loginForm").addEventListener("submit", function (event) {
+            event.preventDefault();
+            validarCampos();
         });
 
         function validarCampos() {
-            var correo = document.getElementById("email").value;
             var contraseña = document.getElementById("password").value;
-            if (correo === "" || contraseña === "") {
-                alert("Debe completar los campos de correo electrónico y contraseña.");
+            if (contraseña === "") {
+                alert("Debe completar el campo de contraseña.");
             } else {
                 redirigir();
             }
