--- a/work.html
+++ b/work.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/canvg/dist/browser/canvg.min.js"></script> 
   <script src="./js/rect.js"></script>
   <script src="./js/linea.js"></script>
   <script src="./js/elipse.js"></script>
@@ -23,10 +24,73 @@
     canvas {
       border: 1px solid black;
     }
+
+    .main-container {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin: 0;
+      padding-top: 5%;
+    }
+
+    .canvas-container {
+      border: 1px solid black;
+    }
+
+    .sidebar {
+      width: 200px;
+      height: 100vh;
+      background-color: #f8f9fa;
+      position: fixed;
+      left: 0;
+      top: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-between;
+      padding-top: 20px;
+    }
+
+    .sidebar ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
+
+    .sidebar li {
+      margin-bottom: 10px;
+    }
+
+    .sidebar a {
+      color: black;
+      text-decoration: none;
+    }
+
+    .sidebar .logo {
+      font-size: 20px;
+      margin-bottom: 20px;
+    }
+
+    .sidebar .profile-pic {
+      width: 80px;
+      height: 80px;
+      border-radius: 50%;
+      object-fit: cover;
+    }
   </style>
 </head>
 
 <body>
+<div class="sidebar">
+  <div>
+    <div class="logo">🎨 Idea Palette</div>
+    <img src="profile-pic.jpg" alt="Profile Picture" class="profile-pic">
+    <ul>
+      <li><a href="home.html">Mis Proyectos</a></li>
+      <li><a href="landing_page.html">Cerrar sesión</a></li>
+    </ul>
+  </div>
+</div>
   <div class="mr-4">
     <ul id="option-list">
       <li class="list-group-item">
@@ -257,6 +321,8 @@
       // Aquí puedes hacer algo con el contenido JSON, como enviarlo al servidor o guardarlo en un archivo.
 
       console.log(contenido);
+
+      
     }
 
     function nuevo() {
