--- a/work.html
+++ b/work.html
@@ -81,13 +81,16 @@
     let inputText;
     let selectedColor = 0;
 
+      window.addEventListener('DOMContentLoaded', (event) => {
+          updateParamList();
+        });
     function selectTool(tool) {
       selectedTool = tool;
       
     }
 
     function setup() {
-      let canvas = createCanvas(800, 600);
+      let canvas = createCanvas(650, 500);
       canvas.parent("canvas-container");
 
       let rectTool = document.getElementById("rect-tool");
@@ -158,6 +161,8 @@
         textSize(20);
         text(currentText, startX, startY);
       }
+
+      
     }
 
     function mouseReleased() {
@@ -192,6 +197,8 @@
         textosArray.push(newTexto);
         currentText = ""; // Reiniciar el texto actual
       }
+
+      updateParamList();
     }
 
     function mousePressed() {
@@ -332,12 +339,53 @@
     textarea.addEventListener("mousedown", handleMouseDown);
   }
 
+  function updateParamList() {
+      let paramList = document.getElementById("param-list");
+      paramList.innerHTML = ""; // Limpiar la lista antes de agregar nuevos elementos
+
+      // Obtener la figura seleccionada
+      let selectedShape = null;
+
+      if (selectedTool === "rect" && rectanglesArray.length > 0) {
+        selectedShape = rectanglesArray[rectanglesArray.length - 1];
+      } else if (selectedTool === "line" && linesArray.length > 0) {
+        selectedShape = linesArray[linesArray.length - 1];
+      } else if (selectedTool === "circle" && ellipsesArray.length > 0) {
+        selectedShape = ellipsesArray[ellipsesArray.length - 1];
+      } else if (selectedTool === "text" && textosArray.length > 0) {
+        selectedShape = textosArray[textosArray.length - 1];
+      }
+
+      // Agregar los parámetros de la figura seleccionada a la lista
+      if (selectedShape) {
+        let params = [
+          { name: "x", value: selectedShape.x },
+          { name: "y", value: selectedShape.y },
+          { name: "width", value: selectedShape.width },
+          { name: "height", value: selectedShape.height },
+          { name: "strokeColor", value: selectedShape.strokeColor },
+          { name: "color", value: selectedShape.color }
+        ];
+
+        for (let param of params) {
+          let listItem = document.createElement("li");
+          listItem.textContent = `${param.name}: ${param.value}`;
+          paramList.appendChild(listItem);
+        }
+      }
+    }
+
 
 
   </script>
 
 
   <div id="canvas-container"></div>
+
+  <div id="sidebar">
+   <b><label>Parámetros</label></b> 
+    <ul id="param-list"></ul>
+  </div>
 
 </body>
 
