--- a/work.html
+++ b/work.html
@@ -261,7 +261,7 @@
         texts: textosArray
       });
 
-      // Datos parámetros de la figura guadrada
+      // Datos parámetros de la figura guardada
 
       console.log(contenido);
         fetch("/guardar-datos", {
